Fixed timeline z-index

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ a:hover {
     flex-direction: column; 
     align-items: center;
     margin-top: 32px;
-    z-index: 1;
+    z-index: 5;
 }
 
 .tree-stem-wrapper {
